--- a/bio.html
+++ b/bio.html
@@ -111,6 +111,9 @@
      </div> 
      
  </div> 
+    <script>
+        document.addEventListener("touchstart", function() {},false);
+    </script>
     
 </body>
 
