iPad media queries

--- a/bio.html
+++ b/bio.html
@@ -107,7 +107,7 @@
      </div>  
      
      <div class="footlogo">        
-       <img src="ialogo.svg" height="50px">
+       <img src="ialogo.svg">
      </div> 
      
  </div> 
