--- a/bio.html
+++ b/bio.html
@@ -52,7 +52,7 @@
      
       <p class="position">With work experience in agriculture, customer service, and     even trucking, I find user-centered design to be the field best suited to my vast range of interests. &nbsp;My education in music and the liberal arts further instills a regard for how deep thinking, polished aesthetics, and exacting craftsmanship impact an audience for the better. <br> <br>
 
-      After completing a rigorous mentorship in user experience and user interface design, I look forward to joining a team devoted to the iterative process of design. &nbsp;I especially appreciate the user research, wireframing, prototyping, and user testing stages of the process thanks to the crucial discoveries they afford for the benefit of users.
+      After completing a rigorous mentorship in user experience and user interface design, I am eager to join a team devoted to the iterative process of design. &nbsp;I especially appreciate the user research, wireframing, prototyping, and user testing stages thanks to the crucial discoveries they afford for the benefit of users.
       </p>
 
      
