--- a/bio.html
+++ b/bio.html
@@ -65,7 +65,7 @@
                <span>About</span>
              </a>
          </li><li>
-             <a href="">
+             <a href="ADAMSRESUME.pdf" target="new">
                <span>Resume</span>
              </a>
          </li><li>
@@ -80,7 +80,7 @@
         <p>Contact Me:</p> 
        <ul>
            <li> 
-                <a href="">
+                <a href="mailto:ianfranceadams@gmail.com">
                   <i class="fas fa-envelope fa-lg"></i> 
                 </a>
            </li>
