--- a/bio.html
+++ b/bio.html
@@ -62,7 +62,7 @@
        <img src="images/IMG_7905.png">
      </div>
      
-      <p class="position">Ever since I was small, two things greatly fascinated me: how things work, and how things look.&nbsp; As I’ve gotten older, the workings of the human psyche become ever more intriguing, too.&nbsp; Having had a wide variety of work experience and encounters with technology, I see that user experience design matches brilliantly with this background.&nbsp; My education in music and the liberal arts further instills a regard for the way deep thinking, polished aesthetics, and exacting craftsmanship impact an audience for the better. <br> <br>
+      <p class="position">Ever since I was small, two things greatly fascinated me: how things work and how things look.&nbsp; As I’ve gotten older, the workings of the human psyche become ever more intriguing, too.&nbsp; Having had a wide range of work experience and encounters with technology (from enjoyable to dreary), I've found user experience design matches brilliantly with this background.&nbsp; My education in music and the liberal arts also instills a regard for the way deep thinking, polished aesthetics, and exacting craftsmanship impact an audience for the better. <br> <br>
 
       After completing a rigorous mentorship in user experience and user interface design, I am eager to join a team devoted to the iterative process of design.&nbsp; I especially appreciate the user research, wireframing, prototyping, and user testing stages thanks to the crucial discoveries they afford for the benefit of users.
       </p>
