--- a/bio.html
+++ b/bio.html
@@ -64,7 +64,7 @@
      
       <p class="position">Ever since I was small, two things greatly fascinated me: how things work and how things look.&nbsp; As I’ve gotten older, the workings of the human psyche become ever more intriguing, too.&nbsp; Having had a wide range of work experience and encounters with technology (from enjoyable to dreary), I've found user experience design matches brilliantly with this background.&nbsp; My education in music and the liberal arts also instills a regard for the way deep thinking, polished aesthetics, and exacting craftsmanship impact an audience for the better. <br> <br>
 
-      I'm currently working as a UI/UX Designer at an exciting mobility startup called <a href="https://www.veoride.com" target="new" cursor="pointer" style="font-weight: normal; letter-spacing: -.4px; color: #00b8aa;"><span
+      I'm currently working as a UI/UX Designer at an exciting mobility startup called <a href="https://www.veoride.com" target="new" cursor="pointer" style="font-weight: normal; letter-spacing: -.4px; color: #2c4d6d;"><span
       >VeoRide</span></a> helping to revamp their mobile app and make the dockless bike (and soon-to-be scooter and electric bike!) sharing experience more accessible and joyful for all.
       </p>
      
