--- a/bio.html
+++ b/bio.html
@@ -62,9 +62,9 @@
        <img src="images/IMG_7905.png">
      </div>
      
-      <p class="position">Ever since I was small, two things greatly fascinated me: how things work and how things look.&nbsp; As I’ve gotten older, the workings of the human psyche become ever more intriguing, too.&nbsp; Having had a wide range of work experience and encounters with technology, from enjoyable to dreary, I've found user experience design matches brilliantly with this background.&nbsp; My education in music and the liberal arts also instills a regard for how deep thinking, polished aesthetics, and exacting craftsmanship impact an audience for the better. <br> <br>
+      <p class="position">Ever since I was small, two things greatly fascinated me: how things work and how things look.&nbsp; As I’ve gotten older, the workings of the human psyche become ever more intriguing, too.&nbsp; Having had a wide range of work experience and encounters with technology, from enjoyable to dreary, I've found user experience design matches brilliantly with this background.&nbsp; My education in music and the liberal arts also instills reverence for how deep thinking, polished aesthetics, and exacting craftsmanship impact audiences for the better. <br> <br>
 
-      I'm currently working as a UI/UX Designer at an exciting mobility startup called <a href="https://www.veoride.com" target="new" cursor="pointer" style="font-weight: normal; letter-spacing: -.4px; color: #2c4d6d;"><span
+      I'm currently working as a UI/UX Designer at an exciting mobility startup called <a href="https://www.veoride.com" target="new" cursor="pointer" style="font-weight: normal; letter-spacing: -.4px; color: #2c4e6d;"><span
       >VeoRide</span></a> helping to revamp their mobile app and make the dockless bike (and soon-to-be scooter and electric bike!) sharing experience more accessible and joyful for all.
       </p>
      
