--- a/bio.html
+++ b/bio.html
@@ -65,9 +65,9 @@
       <p class="position">Ever since I was small, two things greatly fascinated me: how things work and how things look. As I’ve gotten older, the workings of the human psyche become ever more intriguing, too. Having had a wide range of work experience and encounters with technology, from enjoyable to dreary, I've found user experience design matches brilliantly with this background. My education in music and the liberal arts also instills reverence for how deep thinking, polished aesthetics, and exacting craftsmanship impact audiences for the better.
       <a id="list"> <br> <br></a>
 
-      I've most recently worked as the UI/UX Designer at an exciting mobility startup called <a href="https://www.veoride.com" target="new" cursor="pointer" style="font-weight: normal; letter-spacing: -.4px; color: #2c4e6d;"><span
+      I've most recently worked as the UI/UX Designer at an exciting mobility startup called <a href="https://www.veoride.com" target="new" cursor="pointer" style="font-weight: normal; letter-spacing: -.4px; color: #194844;"><span
       >VeoRide</span></a> helping to revamp their mobile app and make the dockless micromobility experience more fun and beneficial for both riders and their communities. While the details of this work is protected by an NDA, I am happy to share broadly about these projects I worked on at VeoRide: 
-<br> <br>
+<br> 
      </p>
        
      
@@ -104,9 +104,9 @@
 
 <br> 
 
-  <span>Improved User Education During Riding Experience</span> (March-June 2019)
+  <span>Improved User Education During Trip Experience</span> (March-June 2019)
 <ul>
-   <li>Redesigned Active Ride Dashboard to show different states based on location in particular riding and parking zones established by city governments </li>
+   <li>Redesigned Active Trip Dashboard to show different states based on location in particular riding and parking zones established by city governments </li>
    <li>Reduced use of frequently ignored pop-up notifications</li>
    <li>Hired freelance animator to produce detailed illustrations of safe and responsible riding and parking behavior</li>
 </ul>
