--- a/bio.html
+++ b/bio.html
@@ -66,7 +66,7 @@
       <a id="list"> <br> <br></a>
 
       I've most recently worked as the UI/UX Designer at an exciting mobility startup called <a href="https://www.veoride.com" target="new" cursor="pointer" style="font-weight: normal; letter-spacing: -.4px;"><span
-      >VeoRide</span></a> helping to revamp their mobile app and make the dockless micromobility experience more fun and beneficial for both riders and their communities. While the details of this work is protected by an NDA, I am happy to share broadly about these projects I worked on at VeoRide: 
+      >VeoRide</span></a> helping to revamp their mobile app and make the dockless micromobility experience more fun and beneficial for both riders and their communities. While the details of this work are protected by a NDA, I am happy to share broadly about these projects I worked on at VeoRide: 
 <br> 
      </p>
        
