Add animation links

--- a/bio.html
+++ b/bio.html
@@ -113,7 +113,7 @@
 <ul>
    <li>Redesigned Active Trip Dashboard to show different states based on location in particular riding and parking zones established by city governments </li>
    <li>Reduced use of frequently ignored pop-up notifications</li>
-   <li>Hired freelance animator to produce detailed illustrations of safe and responsible riding and parking behavior</li>
+   <li>Hired freelance animator to produce detailed illustrations of safe and responsible riding and parking behavior. <a href="https://lottiefiles.com/share/r2TL6O" target="new" style="border-bottom: 2px #00B8AA solid; font-weight: normal; letter-spacing: -.4px;">Click here</a> to see an example of one of these animations (reminding to not block pedestrians). And one more example <a href="https://lottiefiles.com/share/mLaWny" target="new" style="border-bottom: 2px #00B8AA solid; font-weight: normal; letter-spacing: -.4px;">here</a> (showing how to lock a bike). </li>
 </ul>
     
 <br> 
