--- a/bio.html
+++ b/bio.html
@@ -62,8 +62,11 @@
        <img src="images/IMG_7905.png">
      </div>
      
-      <p class="position">Ever since I was small, two things greatly fascinated me: how things work and how things look. As I’ve gotten older, the workings of the human psyche become ever more intriguing, too. Having had a wide range of work experience and encounters with technology, from enjoyable to dreary, I've found user experience design matches brilliantly with this background. My education in music and the liberal arts also instills reverence for how deep thinking, polished aesthetics, and exacting craftsmanship impact audiences for the better.
-      <a id="list"> <br> <br></a>
+      <p class="position">Ever since I was small, two things greatly fascinated me: how things work and how things look. As I’ve gotten older, the workings of the human psyche become ever more intriguing, too. Having had a wide range of work experience and encounters with technology (from enjoyable to dreary!), I've found user experience design matches brilliantly with this background. My education in music and the liberal arts also instills reverence for how deep thinking, polished aesthetics, and exacting craftsmanship impact audiences for the better.
+       <br> <br>
+      In all the work I do, I aim to continuously open up any aspect of a design to further inquiry and testing, so as to remain focused on user needs rather than my own biases, preferences, or intuitions. While industries like transportation, travel, and finance particularly intrigue me, I'm convinced design work in any industry can be engaging and meaningful as long as it solves a problem and improves users' lives. 
+          <br> <br>
+      Throughout my experience, I've grown to see my role as that of a translator between matters of means and ends. I've enjoyed working closely with and learning from engineers as well as sales and operations personnel. I consider it a privilege to work to distill many valuable perspectives and ideas into design solution that are practical, elegant, and as beneficial as possible to all involved.
 
 
      </p>
