--- a/bio.html
+++ b/bio.html
@@ -70,7 +70,7 @@
        <br> <br>
       In all the work I do, I aim to continuously open up any aspect of a design to further inquiry and testing, so as to remain focused on user needs rather than my own biases, preferences, or intuitions. While industries like transportation, travel, and finance particularly intrigue me, I'm convinced design work in any industry can be engaging and meaningful as long as it solves a problem and improves users' lives. 
           <br> <br>
-      During my experience, I've grown to see my role as that of a "translator" between those more involved with means and those more involved with ends. I've enjoyed working closely with and learning from engineers as well as sales and operations personnel. I consider it a privilege to work to distill many valuable perspectives and ideas into user-centered design solutions that are practical, elegant, and as beneficial as possible to all involved.
+      During my experience, I've grown to see my role as that of a &ldquo;translator&rdquo; between those more involved with means and those more involved with ends. I've enjoyed working closely with and learning from engineers as well as sales and operations personnel. I consider it a privilege to work to distill many valuable perspectives and ideas into user-centered design solutions that are practical, elegant, and as beneficial as possible to all involved.
 
 
      </p>
